--- a/.github/workflows/NJ-Task.yml
+++ b/.github/workflows/NJ-Task.yml
@@ -28,12 +28,10 @@ jobs:
 
     - name: 【联通掌厅签到】
       env:
-        user: ${{secrets.USERnj}}
+        usernj: ${{secrets.USERnj}}
         appid: ${{secrets.APPIDnj}}
       run: |
-            if test -z "$appid"; then   appid="247b001385de5cc6ce11731ba1b15835313d489d604e58280e455a6c91e5058651acfb0f0b77029c2372659c319e02645b54c0acc367e692ab24a546b83c302d"; fi
-            
-            for u in $user
+            for u in $usernj
             do
               bash function/CnUnicom.sh ${u/,/ }
             done
