--- a/.github/workflows/NJ-Task.yml
+++ b/.github/workflows/NJ-Task.yml
@@ -28,7 +28,7 @@ jobs:
 
     - name: 【联通日常任务】
       env:
-        usernj: ${{secrets.unicom_usernj}}
-        passwordnj: ${{secrets.unicom_passwordnj}}
-        appidnj: ${{secrets.unicom_appidnj}}
+        usernj: ${{secrets.UNICOM_USERNJ}}
+        passwordnj: ${{secrets.UNICOM_PASSWDNJ}}
+        appidnj: ${{secrets.UNICOM_APPIDNJ}}
       run: node index.js unicom --user=${usernj} --password=${passwordnj} --appid=${appidnj} --tryrun
