--- a/.github/workflows/NJ-Task.yml
+++ b/.github/workflows/NJ-Task.yml
@@ -29,6 +29,6 @@ jobs:
     - name: 【联通日常任务】
       env:
         usernj: ${{secrets.UNICOM_USERNJ}}
-        passwordnj: ${{secrets.UNICOM_PASSWDNJ}}
+        passwordnj: ${{secrets.UNICOM_PASSWORDNJ}}
         appidnj: ${{secrets.UNICOM_APPIDNJ}}
       run: node index.js unicom --user ${usernj} --password ${passwordnj} --appid ${appidnj} --tryrun
