--- a/.github/workflows/NJ-Task.yml
+++ b/.github/workflows/NJ-Task.yml
@@ -25,7 +25,18 @@ jobs:
     - name: 【安装所需依赖】
       run: |
         npm install
-
+    - name: 【联通掌厅签到】
+      env:
+        usernj: ${{ secrets.USERNJ }}
+        appidnj: ${{ secrets.APPIDNJ }}
+      run: |
+            if test -z "$appidnj"; then   appid="247b001385de5cc6ce11731ba1b15835313d489d604e58280e455a6c91e5058651acfb0f0b77029c2372659c319e02645b54c0acc367e692ab24a546b83c302d"; fi
+            
+            for u in $usernj
+            do
+              bash function/CnUnicom.sh ${u/,/ }
+            done
+            
     - name: 【联通日常任务】
       env:
         usernj: ${{secrets.UNICOM_USERNJ}}
