--- a/.github/workflows/NJ-Task.yml
+++ b/.github/workflows/NJ-Task.yml
@@ -3,7 +3,7 @@ name: NieJI-Task
 on:
   workflow_dispatch: # 手动触发
   schedule: # 计划任务触发
-    - cron: "0 1,6,12,16 * * *" # cron表达式，Actions时区是UTC时间，所以要往前推8个小时,如上表示每天13点10分
+    - cron: '01 1,6,12,16 * * *'
 
 jobs:
   build:
