--- a/.github/workflows/NJ-Task.yml
+++ b/.github/workflows/NJ-Task.yml
@@ -1,9 +1,9 @@
 name: NieJI-Task
 
 on:
-  workflow_dispatch: # 手动触发
-  schedule: # 计划任务触发
-    - cron: '01 1,6,12,16 * * *'
+  workflow_dispatch: 
+  schedule: 
+    - cron: '0 0,4,8,16 * * *'
 
 jobs:
   build:
