--- a/.github/workflows/My-Task.yml
+++ b/.github/workflows/My-Task.yml
@@ -35,7 +35,18 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
+        
+    - name: 【联通掌厅签到】
+      env:
+        user: ${{ secrets.USER }}
+        appid: ${{ secrets.APPID }}
+      run: |
+            if test -z "$appid"; then   appid="247b001385de5cc6ce11731ba1b15835313d489d604e58280e455a6c91e5058651acfb0f0b77029c2372659c319e02645b54c0acc367e692ab24a546b83c302d"; fi
+            
+            for u in $user
+            do
+              bash function/CnUnicom.sh ${u/,/ }
+            done
     - name: 【网易日常任务】
       env:
         PHONE: ${{ secrets.PHONE }}
