--- a/.github/workflows/unicom.yml
+++ b/.github/workflows/unicom.yml
@@ -24,5 +24,5 @@ jobs:
             
             for u in $user
             do
-              bash function/CnUnicom.sh ${u/,/ }
+              bash function/CnUnicom.sh ${u/@/ }
             done
