--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,8 @@
 name: run
 
 on:
-  push:
-    branches: [ master ]
-  schedule:
-    - cron: 30 04,23 * * ?
+  workflow_dispatch:
+
 
 jobs:
   update:
