--- a/.github/workflows/My-DailyTask.yml
+++ b/.github/workflows/My-DailyTask.yml
@@ -1,9 +1,9 @@
-name: My-Task
+name: MyDailyTask
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 1,9,16 * * *'
+    - cron: '0 9,16 * * *'
 
 jobs:
   build:
@@ -86,10 +86,8 @@ jobs:
         DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
         DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
 
-
-    - name: 【联通日常任务】
+    - name: 【联通掌厅积分】
       env:
-        user: ${{secrets.unicom_user}}
-        password: ${{secrets.unicom_password}}
-        appid: ${{secrets.unicom_appid}}
-      run: node index.js unicom --user=${user} --password=${password} --appid=${appid} --tryrun
+        PARAMETER: ${{ secrets.PARAMETER }}
+      run: |
+        bash /function/CnUnicom.sh $PARAMETER
