--- a/.github/workflows/Day-Package.yml
+++ b/.github/workflows/Day-Package.yml
@@ -24,4 +24,4 @@ jobs:
           env:
            DAY: ${{ secrets.DAY }}
           run: |
-           bash function/CnUnicom.sh $DAY
+           bash DayPackage.sh $DAY
