--- a/.github/workflows/bbb.yml
+++ b/.github/workflows/bbb.yml
@@ -24,7 +24,7 @@ jobs:
 
     - name: 【安装所需依赖】
       run: |
-            npm install
+            cd function/ && npm install
     - name: run
       env:
         bbb_ck: ${{secrets.BBB_CK}}
