--- a/.github/workflows/My-DailyTask.yml
+++ b/.github/workflows/My-DailyTask.yml
@@ -1,6 +1,7 @@
 name: MyDailyTask
 
 on:
+  PUSH:
   workflow_dispatch:
   schedule:
     - cron: '0 9,16 * * *'
@@ -35,7 +36,14 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        
+    - name: 【安装所需依赖】
+        run: |
+          pip3 install setuptools
+    - name: 【COINPY任务】
+        env:
+           coincookie: ${{ secrets.COINCOOKIE }}
+        run: |
+          python3 function/coin.py ${coincookie}
     - name: 【网易日常任务】
       env:
         PHONE: ${{ secrets.PHONE }}
