--- a/.github/workflows/BBB-Task.yml
+++ b/.github/workflows/BBB-Task.yml
@@ -3,6 +3,7 @@ on:
     # push:
     #     branches:
     #         - master
+    workflow_dispatch:
     schedule:
         - cron: "0 0-15/2 * * *"
 jobs:
