--- a/.github/workflows/BBB-Task.yml
+++ b/.github/workflows/BBB-Task.yml
@@ -1,8 +1,6 @@
 name: BBB
 on:
-    # push:
-    #     branches:
-    #         - master
+    push:
     workflow_dispatch:
     schedule:
         - cron: "0 0-15/2 * * *"
