--- a/.github/workflows/jd_crazy_joy_coin.yaml
+++ b/.github/workflows/jd_crazy_joy_coin.yaml
@@ -2,8 +2,8 @@ name: 京东疯狂JOY挂机
 
 on:
     workflow_dispatch:
-    schedule:
-        - cron: "0 1-23/5 * * *"
+   # schedule:
+       # - cron: "0 1-23/5 * * *"
     watch:
         types: [started]
     repository_dispatch:
