--- a/.github/workflows/My-Unicom.yml
+++ b/.github/workflows/My-Unicom.yml
@@ -3,7 +3,7 @@ name: My-Unicom
 on:
   workflow_dispatch: 
   schedule: 
-    - cron: '0 1,9,16 * * *'
+    - cron: '0 1,9,13,17,21 * * *'
 
 jobs:
   build:
@@ -24,11 +24,12 @@ jobs:
 
     - name: 【安装所需依赖】
       run: |
-        cd UnicomTask/ && npm install
+        git clone -b dev https://github.com/lmh77/BaseSation.git ~/10010
+        cd ~/10010 && npm install
 
     - name: 【联通日常任务】
       env:
         user: ${{secrets.unicom_user}}
         password: ${{secrets.unicom_password}}
         appid: ${{secrets.unicom_appid}}
-      run: cd UnicomTask/ && node index.js unicom --user=${user} --password=${password} --appid=${appid} --tryrun
+      run: cd ~/10010 && node index.js unicom --user=${user} --password=${password} --appid=${appid} --tryrun
