--- a/.github/workflows/My-BBBTask.yml
+++ b/.github/workflows/My-BBBTask.yml
@@ -1,4 +1,4 @@
-name: BBB
+name: My-BBBTask
 on:
     workflow_dispatch:
     schedule:
@@ -14,6 +14,13 @@ jobs:
               uses: actions/setup-node@v1
               with:
                   node-version: "12.x"
+            - name: Cache node_modules
+              uses: actions/cache@v2
+              env:
+                cache-name: cache-node-modules
+              with:
+                path: node_modules
+                key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('package.json') }}
             - name: Run app
               run:  npm install
             - name: Run node
