--- a/.github/workflows/My-Unicom.yml
+++ b/.github/workflows/My-Unicom.yml
@@ -22,6 +22,14 @@ jobs:
         node-version: 12
         registry-url: "https://registry.npmjs.org"
 
+    - name: Cache node_modules
+      uses: actions/cache@v2
+      env:
+        cache-name: cache-node-modules
+      with:
+        path: node_modules
+        key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('package.json') }}
+        
     - name: 【安装所需依赖】
       run: |
         git clone -b dev https://github.com/DJ-clamp/BaseSation.git ~/10010
