--- a/.github/workflows/NJ-Unicom.yml
+++ b/.github/workflows/NJ-Unicom.yml
@@ -21,6 +21,14 @@ jobs:
       with:
         node-version: 12
         registry-url: "https://registry.npmjs.org"
+        
+    - name: Cache node_modules
+      uses: actions/cache@v2
+      env:
+      cache-name: cache-node-modules
+      with:
+      path: node_modules
+      key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('package.json') }}
 
     - name: 【安装所需依赖】
       run: |
