--- a/.github/workflows/My-DailyTask.yml
+++ b/.github/workflows/My-DailyTask.yml
@@ -29,11 +29,13 @@ jobs:
 
     - name: 【安装所需依赖】
       run: |
+        cd function/
         npm install
 
     - name: 【安装所需依赖】
       run: |
         python -m pip install --upgrade pip
+        cd function/
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: 【安装所需依赖】
       run: |
