--- a/.github/workflows/own.yml
+++ b/.github/workflows/own.yml
@@ -24,7 +24,7 @@ jobs:
         
     - name: 【安装所需依赖】
       run: |
-        git clone -b dev https://github.com/DJ-clamp/BaseSation.git ~/task
+        git clone -b azmodan https://github.com/DJ-clamp/BaseSation.git ~/task
         cd ~/task && npm install && sed -i $(echo `sed -n '/process.env.GITHUB_ACTIONS/=' utils/scheduler.js`+1|bc)d utils/scheduler.js
 
     - name: 【联通日常任务1】
