--- a/.github/workflows/own.yml
+++ b/.github/workflows/own.yml
@@ -34,8 +34,8 @@ jobs:
 
     - name: 【执行任务】
       run: |
-        cd ~/task && node index.js unicom  --tryrun --tasks dailysignin,winterTwo,dxIntegralEveryDay,dailygamebox,dailylotteryintegral,dailycomment,dailywoTree,dailyBookRead,dailyBookRead10doDraw,dailyBookLuckdraw,dailyLiuLan,dailyVideoFreeGoods,dailyGrabdollPage,jflottery,jflotteryad,dailyYYY,dailyVideoScratchcard,dailyLKMH,dailyYYQ,bcow,dailyVideo,dailylottery,gameYearBox,producGameSignin,todayDailyTask,dailygameIntegral,dailyCourse,ingots,threeSquirrels,freeDownFloorAd,dailyBaWangcard,book5video,dailyFingerqd,dailyFingerqd2,taocan,dailyTurncards,fetchCoins
-        node index.js unicom  --tryrun --tasks dailygameflow
+        cd ~/task && node index.js unicom  --tryrun --tasks $(cat ~/task/commands/tasks/unicom/unicom.js | sed '/\/\*\*\*/,/\*\*\*\//d' | sed '/\/\//d' | grep -oE "\"[a-z A-Z0-9]+\"" | cut -f2 -d\" | tr "\n" ",")
+        
     # - name: 【联通日常任务1】
     #   env:
     #     user: ${{secrets.unicom_user}}
