--- a/.github/workflows/day.yml
+++ b/.github/workflows/day.yml
@@ -13,46 +13,42 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: 【设置服务时区】
+    - name: set-time
       run: sudo timedatectl set-timezone 'Asia/Shanghai'
 
-    - name: 【设置Node.JS】
+    - name: Node.JS
       uses: actions/setup-node@v1
       with:
         node-version: 12
         registry-url: "https://registry.npmjs.org"
 
-    - name: 【设置Python3】
+    - name: Python3
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
 
-    - name: 【安装所需依赖】
+    - name: dependencies
       run: |
         cd function/
         npm install
-
-    - name: 【安装所需依赖】
-      run: |
         python -m pip install --upgrade pip
-        cd function/
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    - name: 【网易日常任务】
+    - name: tasks
       env:
         PHONE: ${{ secrets.PHONE }}
         PASSWORD: ${{ secrets.PASSWORD }}
         SCKEY: ${{ secrets.BARK_PUSH }}
       run: python3 function/music.py ${PHONE} ${PASSWORD} -s ${SCKEY}
 
-    - name: 【百度签到任务】
+    - name: tasks
       run: node function/tieba.js
       env:
         BDUSS: ${{ secrets.BDUSS }}
         BARK_PUSH: ${{ secrets.BARK_PUSH }}
 
 
-    - name: 【腾讯视频签到】
+    - name: tasks
       run: node function/v_video.js
       env:
         V_REF_URL: ${{ secrets.V_REF_URL }}
