--- a/.github/workflows/day.yml
+++ b/.github/workflows/day.yml
@@ -44,14 +44,37 @@ jobs:
     - name: tasks
       run: node function/tieba.js
       env:
-        BDUSS: ${{ secrets.BDUSS }}
-        BARK_PUSH: ${{ secrets.BARK_PUSH }}
-
+                  BILI_USER: ${{ secrets.BILI_USER }}
+                  BILI_PASS: ${{ secrets.BILI_PASS }}
+                  BILI_COOKIE: ${{ secrets.BILI_COOKIE }}
+                  BILI_NUM: ${{ secrets.BILI_NUM }}
+                  BILI_TYPE: ${{ secrets.BILI_TYPE }}
+                  SEND_KEY: ${{ secrets.SEND_KEY }}
+                  PUSH_KEY: ${{ secrets.PUSH_KEY }}
+                  BARK_PUSH: ${{ secrets.BARK_PUSH }}
+                  PUSH_PLUS_TOKEN: ${{ secrets.PUSH_PLUS_TOKEN}}
+                  PUSH_PLUS_USER: ${{ secrets.PUSH_PLUS_USER}}
+                  TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
+                  TG_USER_ID: ${{ secrets.TG_USER_ID }}
+                  BARK_SOUND: ${{ secrets.BARK_SOUND }}
+                  DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
+                  DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
 
     - name: tasks
       run: node function/v_video.js
       env:
-        V_REF_URL: ${{ secrets.V_REF_URL }}
-        V_COOKIE: ${{ secrets.V_COOKIE }}
-        BARK_PUSH: ${{ secrets.BARK_PUSH }}
-
+                  BILI_USER: ${{ secrets.BILI_USER }}
+                  BILI_PASS: ${{ secrets.BILI_PASS }}
+                  BILI_COOKIE: ${{ secrets.BILI_COOKIE }}
+                  BILI_NUM: ${{ secrets.BILI_NUM }}
+                  BILI_TYPE: ${{ secrets.BILI_TYPE }}
+                  SEND_KEY: ${{ secrets.SEND_KEY }}
+                  PUSH_KEY: ${{ secrets.PUSH_KEY }}
+                  BARK_PUSH: ${{ secrets.BARK_PUSH }}
+                  PUSH_PLUS_TOKEN: ${{ secrets.PUSH_PLUS_TOKEN}}
+                  PUSH_PLUS_USER: ${{ secrets.PUSH_PLUS_USER}}
+                  TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
+                  TG_USER_ID: ${{ secrets.TG_USER_ID }}
+                  BARK_SOUND: ${{ secrets.BARK_SOUND }}
+                  DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
+                  DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
