--- a/.github/workflows/day.yml
+++ b/.github/workflows/day.yml
@@ -63,16 +63,18 @@ jobs:
     - name: tasks
       run: node function/v_video.js
       env:
-                  BILI_USER: ${{ secrets.BILI_USER }}
-                  BILI_PASS: ${{ secrets.BILI_PASS }}
-                  BILI_COOKIE: ${{ secrets.BILI_COOKIE }}
-                  BILI_NUM: ${{ secrets.BILI_NUM }}
-                  BILI_TYPE: ${{ secrets.BILI_TYPE }}
+                  V_REF_URL: ${{ secrets.V_REF_URL }}
+                  V_COOKIE: ${{ secrets.V_COOKIE }}
                   SEND_KEY: ${{ secrets.SEND_KEY }}
                   PUSH_KEY: ${{ secrets.PUSH_KEY }}
                   BARK_PUSH: ${{ secrets.BARK_PUSH }}
                   PUSH_PLUS_TOKEN: ${{ secrets.PUSH_PLUS_TOKEN}}
                   PUSH_PLUS_USER: ${{ secrets.PUSH_PLUS_USER}}
+                  QYWX_KEY: ${{ secrets.QYWX_KEY}}
+                  QYWX_AM: ${{ secrets.QYWX_AM}}
+                  TG_PROXY_HOST: ${{ secrets.TG_PROXY_HOST}}
+                  TG_PROXY_PORT: ${{ secrets.TG_PROXY_PORT}}
+                  IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY}}
                   TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
                   TG_USER_ID: ${{ secrets.TG_USER_ID }}
                   BARK_SOUND: ${{ secrets.BARK_SOUND }}
