--- a/.github/workflows/day.yml
+++ b/.github/workflows/day.yml
@@ -34,12 +34,12 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    - name: tasks
-      env:
-        PHONE: ${{ secrets.PHONE }}
-        PASSWORD: ${{ secrets.PASSWORD }}
-        SCKEY: ${{ secrets.BARK_PUSH }}
-      run: python3 function/music.py ${PHONE} ${PASSWORD} -s ${SCKEY}
+#     - name: tasks
+#       env:
+#         PHONE: ${{ secrets.PHONE }}
+#         PASSWORD: ${{ secrets.PASSWORD }}
+#         SCKEY: ${{ secrets.BARK_PUSH }}
+#       run: python3 function/music.py ${PHONE} ${PASSWORD} -s ${SCKEY}
 
     - name: tasks
       run: node function/tieba.js
